--- a/Lunar_Lander_DQN.ipynb
+++ b/Lunar_Lander_DQN.ipynb
@@ -23,6 +23,30 @@
     {
       "cell_type": "code",
       "source": [
+        "pip install swig"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uE-jUdEpyAp8",
+        "outputId": "ffff5843-0bdc-4218-a752-5e36f2c1c229"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: swig in /usr/local/lib/python3.11/dist-packages (4.3.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "pip install gymnasium[box2d]"
       ],
       "metadata": {
@@ -30,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T6Fh_8aG87pR",
-        "outputId": "9082af86-d230-4bc7-f5d7-4b1d793370ff"
+        "outputId": "d71db54e-38e0-4373-a7c2-6f56e419399f"
       },
       "execution_count": null,
       "outputs": [
@@ -49,6 +73,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Yp_bkJ3fx8ef"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -105,7 +138,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zowvpGAfTw8P",
-        "outputId": "a918011a-fa23-4ea9-f579-a4f729c5bd51"
+        "outputId": "0d11274c-1f36-4fe6-df3e-4532d74b4783"
       },
       "outputs": [
         {
@@ -146,9 +179,9 @@
       "source": [
         "# Parâmetros de aprendizado\n",
         "learning_rate = 5e-4\n",
-        "batch_size =100\n",
-        "discount_factor = 0.99\n",
-        "replay_buffer_size = int(1e5)\n",
+        "batch_size =100 #Tamanho da batela\n",
+        "discount_factor = 0.99 # gamma\n",
+        "replay_buffer_size = int(1e5) #Memory\n",
         "interpolation_parameter = 1e-3\n"
       ]
     },
@@ -215,15 +248,52 @@
     {
       "cell_type": "code",
       "source": [
-        "class DeepQLearn():\n",
+        "class DQN(): # Implementando o aprendizado DQN adaptado\n",
         "  def __init__(self,state_size,number_actions):\n",
-        "    self.device = torc.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "    self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "    self.state_size =state_size\n",
         "    self.action_size = number_actions\n",
-        "    self.memory = ReplayMemory(replay_buffer_size)\n",
-        "    self.model = Network(state_size,number_actions).to(self.device)\n",
+        "    self.memory = ReplayMemory(replay_buffer_size) # Memória\n",
+        "    self.model = Network(state_size,number_actions).to(self.device) # Rede Neural\n",
+        "    self.optmize = optim.Adam(self.model.parameters()) # Otimizador\n",
         "    self.target_network = Network(state_size,number_actions).to(self.device)\n",
-        "    self.optmize = optim.Adam(self.model.parameters(), learning_rate=learning_rate)\n"
+        "    self.step=0\n",
+        "\n",
+        "  def step(self,state,action,reward,next_state,done):\n",
+        "    self.memory.push((state,action,reward,next_state,done)) # Armazena no buffer\n",
+        "    self.t_step = (self.t_step +1 )%4 # Atualiza os passos\n",
+        "    if self.t_step == 0: # Verifica se é hora de treinar\n",
+        "      if len(self.memory.memory) > batch_size:\n",
+        "        experiences = self.memory.sample(batch_size)\n",
+        "        self.learn(experiences,discount_factor)\n",
+        "\n",
+        "  def act(self, state, epsilon = 0.):\n",
+        "    state = torch.from_numpy(state).float().unsqueeze(0).to(self.device) # Tensor\n",
+        "    self.local_qnetwork.eval() # Modo de avaliação\n",
+        "    with torch.no_grad():\n",
+        "      action_values = self.local_qnetwork(state) # Cálculo de Q-values\n",
+        "    self.local_qnetwork.train() # Treinamento\n",
+        "    if random.random() > epsilon:\n",
+        "      return np.argmax(action_values.cpu().data.numpy())\n",
+        "    else:\n",
+        "      return random.choice(np.arange(self.action_size)) # Escolhe uma ação com maior Q-value\n",
+        "\n",
+        "\n",
+        "\n",
+        "  def learn(self, experiences, discount_factor):\n",
+        "    states, next_states, actions, rewards, dones = experiences # Extrai as memorias\n",
+        "    next_q_targets = self.target_qnetwork(next_states).detach().max(1)[0].unsqueeze(1) # Calcula Q-values alvo\n",
+        "    q_targets = rewards + discount_factor * next_q_targets * (1 - dones) # Equação de Bellman (Diferença Temporal)\n",
+        "    q_expected = self.local_qnetwork(states).gather(1, actions)\n",
+        "    loss = F.mse_loss(q_expected, q_targets) # Calcula perdas\n",
+        "    self.optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    self.optimizer.step()\n",
+        "    self.soft_update(self.local_qnetwork, self.target_qnetwork, interpolation_parameter) # Propaga e atualiza a rede\n",
+        "\n",
+        "  def soft_update(self, local_model, target_model, interpolation_parameter):\n",
+        "    for target_param, local_param in zip(target_model.parameters(), local_model.parameters()):\n",
+        "      target_param.data.copy_(interpolation_parameter * local_param.data + (1.0 - interpolation_parameter) * target_param.data)\n"
       ],
       "metadata": {
         "id": "DthgH9iF_pbk"
@@ -232,11 +302,15 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [],
+      "cell_type": "code",
+      "source": [
+        "dqn = DQN(state_size,number_actions)"
+      ],
       "metadata": {
-        "id": "9I03AW5u18p-"
-      }
+        "id": "o2CkCMQHxsWc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
