--- a/Lunar_Lander_DQN.ipynb
+++ b/Lunar_Lander_DQN.ipynb
@@ -21,80 +21,16 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "pip install swig"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uE-jUdEpyAp8",
-        "outputId": "ffff5843-0bdc-4218-a752-5e36f2c1c229"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: swig in /usr/local/lib/python3.11/dist-packages (4.3.1)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "pip install gymnasium[box2d]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T6Fh_8aG87pR",
-        "outputId": "d71db54e-38e0-4373-a7c2-6f56e419399f"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: gymnasium[box2d] in /usr/local/lib/python3.11/dist-packages (1.2.0)\n",
-            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.0.2)\n",
-            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (3.1.1)\n",
-            "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (4.14.1)\n",
-            "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (0.0.4)\n",
-            "Requirement already satisfied: box2d-py==2.3.5 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.3.5)\n",
-            "Requirement already satisfied: pygame>=2.1.3 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.6.1)\n",
-            "Requirement already satisfied: swig==4.* in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (4.3.1)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Yp_bkJ3fx8ef"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "4CnaDqSOUSDK"
       },
       "source": [
+        "**Dependências:**\n",
         "```\n",
         " pip install swig\n",
         " pip install gymnasium[box2d]\n",
         "```\n",
-        "Imports necessários:\n",
-        "\n",
         "\n",
         "*   OS\n",
         "*   Random\n",
@@ -111,8 +47,49 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Importação de Dependências"
+      ],
+      "metadata": {
+        "id": "0H1Qf9BA2LZB"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!pip install swig\n",
+        "!pip install gymnasium[box2d]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uE-jUdEpyAp8",
+        "outputId": "12726400-0090-47fd-a02d-81690ad5e8cd"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: swig in /usr/local/lib/python3.11/dist-packages (4.3.1)\n",
+            "Requirement already satisfied: gymnasium[box2d] in /usr/local/lib/python3.11/dist-packages (1.2.0)\n",
+            "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.0.2)\n",
+            "Requirement already satisfied: cloudpickle>=1.2.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (3.1.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (4.14.1)\n",
+            "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (0.0.4)\n",
+            "Requirement already satisfied: box2d-py==2.3.5 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.3.5)\n",
+            "Requirement already satisfied: pygame>=2.1.3 in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (2.6.1)\n",
+            "Requirement already satisfied: swig==4.* in /usr/local/lib/python3.11/dist-packages (from gymnasium[box2d]) (4.3.1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
       "metadata": {
         "id": "EtOtA-a5TT2q"
       },
@@ -127,8 +104,18 @@
         "import torch.nn.functional as F # Funções de ativação, perda, convolução, etc (ReLU)\n",
         "import torch.autograd as autograd # Diferenciação automática (gradiente)\n",
         "from torch.autograd import Variable\n",
-        "from collections import deque, namedtuple"
+        "from collections import deque, namedtuple\n",
+        "import gymnasium as gym"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Geração de Ambiente Gymnasium"
+      ],
+      "metadata": {
+        "id": "kIVp2qKI2TiP"
+      }
     },
     {
       "cell_type": "code",
@@ -155,8 +142,6 @@
         }
       ],
       "source": [
-        "# Biblioteca Gymnasium\n",
-        "import gymnasium as gym\n",
         "env = gym.make(\"LunarLander-v3\", continuous=False, gravity=-10.0,\n",
         "               enable_wind=False, wind_power=15.0, turbulence_power=1.5)\n",
         "state_shape = env.observation_space.shape\n",
@@ -170,47 +155,13 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TaCPvqVJTyVH"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "# Parâmetros de aprendizado\n",
-        "learning_rate = 5e-4\n",
-        "batch_size =100 #Tamanho da batela\n",
-        "discount_factor = 0.99 # gamma\n",
-        "replay_buffer_size = int(1e5) #Memory\n",
-        "interpolation_parameter = 1e-3\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Rede Neural\n",
-        "class Network(nn.Module):\n",
-        "  def __init__(self,state_size,number_actions,seed=42):\n",
-        "    super(Network, self).__init__()\n",
-        "    self.seed = torch.manual_seed(seed)\n",
-        "    self.fc1 = nn.Linear(state_size, 64)\n",
-        "    self.fc2 = nn.Linear(64, 64) # 3 Camadas de neurônios totalmente conectadas\n",
-        "    self.fc3 = nn.Linear(64, number_actions)\n",
-        "\n",
-        "\n",
-        "  def forward(self, state):\n",
-        "    x = self.fc1(state)\n",
-        "    x = F.relu(x)\n",
-        "    x = self.fc2(x)\n",
-        "    x = F.relu(x)\n",
-        "    q_values = self.fc3(x)\n",
-        "    return q_values"
+        "## Estrutura de Memória"
       ],
       "metadata": {
-        "id": "8iUtccNoXKEw"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "lgr9LQfF2rEa"
+      }
     },
     {
       "cell_type": "code",
@@ -241,6 +192,72 @@
       ],
       "metadata": {
         "id": "xe4jl_Rn180Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Definição da Rede Neural"
+      ],
+      "metadata": {
+        "id": "9vx4vcCV2h-F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* taxa de aprendizado: 0.0005\n",
+        "* tamanho de batela: 100\n",
+        "* coeficiente gamma: 0.99\n",
+        "* tamanho da memória: 100 mil amostras\n",
+        "* taxa de atualização (parâmetro tau): 0.001\n",
+        "* Número de camadas:"
+      ],
+      "metadata": {
+        "id": "XQnIbzwA2v0b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TaCPvqVJTyVH"
+      },
+      "outputs": [],
+      "source": [
+        "# Parâmetros de aprendizado\n",
+        "learning_rate = 5e-4\n",
+        "batch_size =100 #Tamanho da batela\n",
+        "discount_factor = 0.99 # gamma\n",
+        "replay_buffer_size = int(1e5) #Memory\n",
+        "interpolation_parameter = 1e-3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Rede Neural\n",
+        "class Network(nn.Module):\n",
+        "  def __init__(self,state_size,number_actions,seed=42):\n",
+        "    super(Network, self).__init__()\n",
+        "    self.seed = torch.manual_seed(seed)\n",
+        "    self.fc1 = nn.Linear(state_size, 64)\n",
+        "    self.fc2 = nn.Linear(64, 64) # 3 Camadas de neurônios totalmente conectadas\n",
+        "    self.fc3 = nn.Linear(64, number_actions)\n",
+        "\n",
+        "\n",
+        "  def forward(self, state):\n",
+        "    x = self.fc1(state)\n",
+        "    x = F.relu(x)\n",
+        "    x = self.fc2(x)\n",
+        "    x = F.relu(x)\n",
+        "    q_values = self.fc3(x)\n",
+        "    return q_values"
+      ],
+      "metadata": {
+        "id": "8iUtccNoXKEw"
       },
       "execution_count": null,
       "outputs": []
